cleanup and refactoring.
- fun out the imports from io
- remove unnecesary fields
- make fields final
- remove exeption declaration in functions signatures
- make close connection waiting for a response - requires client driver modification
- add TODOs
- add curly brackets scopes in missing places
- replace the way commands are executed
- add TIMEOUT for waiting for command/response to arrive
- extract sleeping calls