@@ -3,10 +3,17 @@ package ro.altom.altunitytester;
 import com.google.gson.Gson;
 import ro.altom.altunitytester.altUnityTesterExceptions.*;
 
-import java.io.*;
+import java.io.DataInputStream;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.net.Socket;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.Date;
 
 public class AltUnityDriver {
+
+    private static final int MAX_LISTENING_TIME = 3000;
 
     public static class PlayerPrefsKeyType {
         public static int IntType = 1;
@@ -14,69 +21,82 @@ public class AltUnityDriver {
         public static int FloatType = 3;
     }
 
-    public Socket socket;
-    private static String tcp_ip = "127.0.0.1";
-    private static int tcp_port = 13000;
-    private static int BUFFER_SIZE = 1024;
-    private PrintWriter out;
-    private DataInputStream in;
+    private final Socket socket;
+    private final static int BUFFER_SIZE = 1024;
+    private final PrintWriter out;
+    private final DataInputStream in;
 
 
     public AltUnityDriver(String ip, int port) throws IOException {
-        tcp_ip = ip;
-        tcp_port = port;
-        socket = new Socket(tcp_ip, tcp_port);
+        if (ip == null || ip.isEmpty()) {
+            throw new AltUnityException("Provided IP address is null or empty");
+        }
+        socket = new Socket(ip, port);
         out = new PrintWriter(socket.getOutputStream(), true);
         in = new DataInputStream(socket.getInputStream());
+        // TODO: make this uneccesary
         AltUnityObject.altUnityDriver = this;
-
     }
 
-    public void send(String message) throws Exception {
+    public void send(String message) {
         out.print(message);
         out.flush();
     }
 
-    public void stop() throws Exception {
+    public void stop() throws IOException {
         send("closeConnection;&");
-        Thread.sleep(2000);
+        String data = recvall();
+        if (!data.equals("Ok")){
+            System.err.println("Could not close connection from the client");
+        }
         socket.close();
     }
 
-    public String recvall() throws Exception {
-        String data = "";
-        boolean end = false;
-        while (!end) {
+    // TODO: move this out from the driver
+    public String recvall() {
+        String receivedData = "";
+        boolean streamIsFinished = false;
+        Instant start = Instant.now();
+
+        while (!streamIsFinished) {
             byte[] messageByte = new byte[BUFFER_SIZE];
-            int bytesRead = in.read(messageByte);
+            int bytesRead = 0;
+            try {
+                bytesRead = in.read(messageByte);
+            } catch (IOException e) {
+                throw new AltUnityException(e);
+            }
             if (bytesRead > 0)
-                data += new String(messageByte, 0, bytesRead);
-            if (data.contains("::altend")) {
-                end = true;
+                receivedData += new String(messageByte, 0, bytesRead);
+            if (receivedData.contains("::altend")) {
+                streamIsFinished = true;
+            }
+            Instant now = Instant.now();
+            long timeSpendOnListening = Duration.between(start, now).toMillis();
+            if (timeSpendOnListening > MAX_LISTENING_TIME){
+                // TODO: rethink this part - possibly throw exception or check the split which happens later
+                System.err.println("Couldn't get and answer from the client for specified time [ms] " + MAX_LISTENING_TIME);
+                return "";
             }
         }
-        try {
-            data = data.split("altstart::")[1].split("::altend")[0];
-        } catch (Exception e) {
-            System.out.println("Data received from socket doesn't have correct start and end control Strings");
-            throw e;
-        }
-        System.out.println("Data received: " + data);
-        return data;
+
+        receivedData = receivedData.split("altstart::")[1].split("::altend")[0];
+        System.out.println("Data received: " + receivedData);
+        return receivedData;
     }
+
     public String callStaticMethods(String assembly,String typeName, String methodName,
                                     String parameters,String typeOfParameters) throws Exception {
         String actionInfo =new Gson().toJson(new AltUnityObjectAction(typeName, methodName, parameters,typeOfParameters,assembly));
         send("callComponentMethodForObject;" + "" + "; " + actionInfo + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return data;
+        if (!data.contains("error:")) {
+            return data;
+        }
         handleErrors(data);
-        return null;
+        return "";
     }
-    public String callStaticMethods(String assembly,String typeName, String methodName,
-                                    String parameters) throws Exception {
-        return callStaticMethods(typeName,methodName,parameters,"");
-    }
+
     public String callStaticMethods(String typeName, String methodName,String parameters ) throws Exception {
         return callStaticMethods("",typeName,methodName,parameters,"");
     }
@@ -85,16 +105,18 @@ public class AltUnityDriver {
         System.out.println("Load scene: " + scene + "...");
         send("loadScene;" + scene + ";&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")) {
             return;
+        }
         handleErrors(data);
     }
 
     public void deletePlayerPref() throws Exception {
         send("deletePlayerPref;&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")){
             return;
+        }
         handleErrors(data);
     }
 
@@ -109,32 +131,36 @@ public class AltUnityDriver {
     public void setKeyPlayerPref(String keyName, int valueName) throws Exception {
         send("setKeyPlayerPref;" + keyName + ";" + valueName + ";" + PlayerPrefsKeyType.IntType + ";&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")) {
             return;
+        }
         handleErrors(data);
     }
 
     public void setKeyPlayerPref(String keyName, float valueName) throws Exception {
         send("setKeyPlayerPref;" + keyName + ";" + valueName + ";" + PlayerPrefsKeyType.FloatType + ";&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")){
             return;
+        }
         handleErrors(data);
     }
 
     public void setKeyPlayerPref(String keyName, String valueName) throws Exception {
         send("setKeyPlayerPref;" + keyName + ";" + valueName + ";" + PlayerPrefsKeyType.StringType + ";&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")) {
             return;
+        }
         handleErrors(data);
     }
-
 
     public int getIntKeyPlayerPref(String keyname) throws Exception {
         send("getKeyPlayerPref;" + keyname + ";" + PlayerPrefsKeyType.IntType + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return Integer.parseInt(data);
+        if (!data.contains("error:")) {
+            return Integer.parseInt(data);
+        }
         handleErrors(data);
         return 0;
     }
@@ -142,7 +168,9 @@ public class AltUnityDriver {
     public float getFloatKeyPlayerPref(String keyname) throws Exception {
         send("getKeyPlayerPref;" + keyname + ";" + PlayerPrefsKeyType.FloatType + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return Float.parseFloat(data);
+        if (!data.contains("error:")) {
+            return Float.parseFloat(data);
+        }
         handleErrors(data);
         return 0;
 
@@ -151,13 +179,14 @@ public class AltUnityDriver {
     public String getStringKeyPlayerPref(String keyname) throws Exception {
         send("getKeyPlayerPref;" + keyname + ";" + PlayerPrefsKeyType.StringType + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return data;
+        if (!data.contains("error:")) {
+            return data;
+        }
         handleErrors(data);
-        return null;
-
+        return "";
     }
 
-    public String getCurrentScene() throws Exception {
+    public String getCurrentScene() {
         System.out.println("Get current scene...");
         send("getCurrentScene;&");
         String data = recvall();
@@ -165,141 +194,151 @@ public class AltUnityDriver {
             return (new Gson().fromJson(data, AltUnityObject.class)).name;
         }
         handleErrors(data);
-        return null;
+        return "";
     }
 
-
-    public void swipe(int xStart, int yStart, int xEnd, int yEnd, float durationInSecs) throws Exception {
+    public void swipe(int xStart, int yStart, int xEnd, int yEnd, float durationInSecs) {
         String vectorStartJson = vectorToJsonString(xStart, yStart);
         String vectorEndJson = vectorToJsonString(xEnd, yEnd);
         send("movingTouch;" + vectorStartJson + ";" + vectorEndJson + ";" + durationInSecs + ";&");
         String data = recvall();
-        if (data.equals("Ok"))
+        if (data.equals("Ok")){
             return;
+        }
         handleErrors(data);
     }
 
-
-    public void swipeAndWait(int xStart, int yStart, int xEnd, int yEnd, float durationInSecs) throws Exception {
+    public void swipeAndWait(int xStart, int yStart, int xEnd, int yEnd, float durationInSecs) {
         swipe(xStart, yStart, xEnd, yEnd, durationInSecs);
-        Thread.sleep((int) durationInSecs * 1000);
+        sleepFor(durationInSecs * 1000);
         String data;
         do {
             send("swipeFinished;&");
             data = recvall();
         } while (data.equals("No"));
-        if (data.equals("Yes"))
+
+        if (data.equals("Yes")){
             return;
+        }
         handleErrors(data);
     }
 
-    public void holdButton(int xPosition, int yPosition, float durationInSecs) throws Exception {
+    public void holdButton(int xPosition, int yPosition, float durationInSecs) {
         swipe(xPosition, yPosition, xPosition, yPosition, durationInSecs);
     }
 
-    public void holdButtonAndWait(int xPosition, int yPosition, float durationInSecs) throws Exception {
+    public void holdButtonAndWait(int xPosition, int yPosition, float durationInSecs) {
         swipeAndWait(xPosition, yPosition, xPosition, yPosition, durationInSecs);
     }
 
-    public AltUnityObject clickScreen(float x, float y) throws Exception {
+    public AltUnityObject clickScreen(float x, float y) {
         send("clickScreenOnXY;" + x + ";" + y + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return (new Gson().fromJson(data, AltUnityObject.class));
+        if (!data.contains("error:")) {
+            return (new Gson().fromJson(data, AltUnityObject.class));
+        }
         handleErrors(data);
         return null;
     }
 
-    public void tilt(int x, int y, int z) throws Exception {
+    public void tilt(int x, int y, int z)  {
         String accelerationString = vectorToJsonString(x, y, z);
         send("tilt;" + accelerationString + ";&");
         String data = recvall();
-        if (data.equals("OK")) return;
+        if (data.equals("OK")) {
+            return;
+        }
         handleErrors(data);
     }
 
-    public AltUnityObject findElementWhereNameContains(String name, String cameraName) throws Exception {
+    public AltUnityObject findElementWhereNameContains(String name, String cameraName) {
         send("findObjectWhereNameContains;" + name + ";" + cameraName + ";&");
         String data = recvall();
         if (!data.contains("error:")) {
-           return new Gson().fromJson(data, AltUnityObject.class);
+            return new Gson().fromJson(data, AltUnityObject.class);
         }
         handleErrors(data);
         return null;
     }
 
-    public AltUnityObject findElementWhereNameContains(String name) throws Exception {
+    public AltUnityObject findElementWhereNameContains(String name) {
         return findElementWhereNameContains(name, "");
     }
 
-    public AltUnityObject[] getAllElements(String cameraName) throws Exception {
+    public AltUnityObject[] getAllElements(String cameraName) {
         send("findAllObjects;" + ";" + cameraName + "&");
         String data = recvall();
-        if (!data.contains("error:")) return (new Gson().fromJson(data, AltUnityObject[].class));
-        handleErrors(data);
-        return null;
-    }
-
-    public AltUnityObject[] getAllElements() throws Exception {
-        return getAllElements("");
-    }
-
-
-    public AltUnityObject findElement(String name, String cameraName) throws Exception {
-        send("findObjectByName;" + name + ";" + cameraName + ";&");
-        String data = recvall();
         if (!data.contains("error:")) {
-           return new Gson().fromJson(data, AltUnityObject.class);
+            return (new Gson().fromJson(data, AltUnityObject[].class));
         }
         handleErrors(data);
         return null;
     }
 
-    public AltUnityObject findElement(String name) throws Exception {
+    public AltUnityObject[] getAllElements() {
+        return getAllElements("");
+    }
+
+    public AltUnityObject findElement(String name, String cameraName) {
+        send("findObjectByName;" + name + ";" + cameraName + ";&");
+        String data = recvall();
+        if (!data.contains("error:")) {
+            return new Gson().fromJson(data, AltUnityObject.class);
+        }
+        handleErrors(data);
+        return null;
+    }
+
+    public AltUnityObject findElement(String name) {
         return findElement(name, "");
     }
 
-    public AltUnityObject[] findElements(String name, String cameraName) throws Exception {
+    public AltUnityObject[] findElements(String name, String cameraName) {
         send("findObjectsByName;" + name + ";" + cameraName + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return new Gson().fromJson(data, AltUnityObject[].class);
+        if (!data.contains("error:")) {
+            return new Gson().fromJson(data, AltUnityObject[].class);
+        }
         handleErrors(data);
-        return null;
+        return new AltUnityObject[]{};
     }
 
-    public AltUnityObject[] findElements(String name) throws Exception {
+    public AltUnityObject[] findElements(String name) {
         return findElements(name, "");
     }
 
-
-    public AltUnityObject[] findElementsWhereNameContains(String name, String cameraName) throws Exception {
+    public AltUnityObject[] findElementsWhereNameContains(String name, String cameraName) {
         send("findObjectsWhereNameContains;" + name + ";" + cameraName + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return new Gson().fromJson(data, AltUnityObject[].class);
+        if (!data.contains("error:")){
+            return new Gson().fromJson(data, AltUnityObject[].class);
+        }
         handleErrors(data);
-        return null;
+        return new AltUnityObject[]{};
     }
 
-    public AltUnityObject tapScreen(int x, int y) throws Exception {
+    public AltUnityObject tapScreen(int x, int y) {
         send("tapScreen;" + x + ";" + y + ";&");
         String data = recvall();
-        if (!data.contains("error:")) return new Gson().fromJson(data, AltUnityObject.class);
+        if (!data.contains("error:")){
+            return new Gson().fromJson(data, AltUnityObject.class);
+        }
         handleErrors(data);
         return null;
     }
 
-    public AltUnityObject[] findElementsWhereNameContains(String name) throws Exception {
+    public AltUnityObject[] findElementsWhereNameContains(String name) {
         return findElementsWhereNameContains(name, "");
     }
 
-
-    public String waitForCurrentSceneToBe(String sceneName, double timeout, double interval) throws Exception {
+    public String waitForCurrentSceneToBe(String sceneName, double timeout, double interval) {
         double time = 0;
         String currentScene = "";
         while (time < timeout) {
             currentScene = getCurrentScene();
             if (!currentScene.equals(sceneName)) {
                 System.out.println("Waiting for scene to be " + sceneName + "...");
-                Thread.sleep((long) (interval * 1000));
+                sleepFor(interval);
                 time += interval;
             } else {
                 break;
@@ -315,7 +354,7 @@ public class AltUnityDriver {
         return waitForCurrentSceneToBe(sceneName, 20, 0.5);
     }
 
-    public AltUnityObject waitForElementWhereNameContains(String name,String cameraName, double timeout, double interval) throws Exception {
+    public AltUnityObject waitForElementWhereNameContains(String name,String cameraName, double timeout, double interval) {
         double time = 0;
         AltUnityObject altElement = null;
         while (time < timeout) {
@@ -324,7 +363,7 @@ public class AltUnityDriver {
                 break;
             } catch (Exception e) {
                 System.out.println("Waiting for element where name contains " + name + "....");
-                Thread.sleep((long) (interval * 1000));
+                sleepFor(interval);
                 time += interval;
 
             }
@@ -339,7 +378,7 @@ public class AltUnityDriver {
     }
 
 
-    public void waitForElementToNotBePresent(String name,String cameraName, double timeout, double interval) throws Exception {
+    public void waitForElementToNotBePresent(String name,String cameraName, double timeout, double interval) {
         double time = 0;
         AltUnityObject altElement = null;
         while (time <= timeout) {
@@ -347,14 +386,23 @@ public class AltUnityDriver {
                 altElement = findElement(name,cameraName);
                 break;
             } catch (Exception e) {
-                Thread.sleep((long) (interval * 1000));
+                sleepFor(interval);
                 time += interval;
                 System.out.println("Waiting for element " + name + " to not be present");
             }
         }
 
         if (!altElement.equals(null))
-            throw new Exception("Element " + name + " still not found after " + timeout + " seconds");
+            throw new AltUnityException("Element " + name + " not found after " + timeout + " seconds");
+    }
+
+    private void sleepFor(double interval) {
+            long timeToSleep = (long) (interval * 1000);
+        try {
+            Thread.sleep(timeToSleep);
+        } catch (InterruptedException e) {
+            System.err.println("Could not sleep for " + timeToSleep + " ms");
+        }
     }
 
     public void waitForElementToNotBePresent(String name) throws Exception {
@@ -362,7 +410,7 @@ public class AltUnityDriver {
     }
 
 
-    public AltUnityObject waitForElement(String name,String cameraName, double timeout, double interval) throws Exception {
+    public AltUnityObject waitForElement(String name,String cameraName, double timeout, double interval) {
         double time = 0;
         AltUnityObject altElement = null;
         while (time < timeout) {
@@ -370,50 +418,46 @@ public class AltUnityDriver {
                 altElement = findElement(name,cameraName);
                 break;
             } catch (Exception e) {
-                Thread.sleep((long) (interval * 1000));
+                sleepFor(interval);
                 time += interval;
                 System.out.println("Waiting for element " + name + "...");
-
             }
         }
 
         if (altElement != null) {
             return altElement;
         }
-        throw new WaitTimeOutException("Element " + name + " not loaded after " + timeout + " seconds");
+        throw new WaitTimeOutException("Element " + name + " loaded after " + timeout + " seconds");
     }
 
     public AltUnityObject waitForElement(String name) throws Exception {
         return waitForElement(name,"", 20, 0.5);
     }
 
-    public AltUnityObject waitForElementWithText(String name, String text,String cameraName, double timeout, double interval) throws Exception {
+    public AltUnityObject waitForElementWithText(String name, String text,String cameraName, double timeout, double interval) {
         double time = 0;
         AltUnityObject altElement = null;
         while (time < timeout) {
             try {
                 altElement = findElement(name, cameraName);
-                if (altElement.getText().equals(text))
-                    break;
-                throw new Exception("Not the wanted text");
+                if (altElement.getText().equals(text)){
+                    return altElement;
+                }
             } catch (Exception e) {
-                Thread.sleep((long) (interval * 1000));
+                sleepFor(interval);
                 time += interval;
                 System.out.println("Waiting for element " + name + " to have text " + text);
             }
         }
-        if (altElement.getText().equals(text)) {
-            return altElement;
-        }
-        throw new WaitTimeOutException("Element with text: " + text + " not loaded after " + timeout + " seconds");
+        throw new WaitTimeOutException("Element with text: " + text + " loaded after " + timeout + " seconds");
     }
 
-    public AltUnityObject waitForElementWithText(String name, String text) throws Exception {
+    public AltUnityObject waitForElementWithText(String name, String text) {
         return waitForElementWithText(name, text,"", 20, 0.5);
     }
 
 
-    public AltUnityObject findElementByComponent(String componentName,String assemblyName, String cameraName) throws Exception {
+    public AltUnityObject findElementByComponent(String componentName,String assemblyName, String cameraName) {
         send("findObjectByComponent;"+assemblyName+";" + componentName + ";" + cameraName + ";&");
         String data = recvall();
         if (!data.contains("error:")) {
@@ -423,27 +467,25 @@ public class AltUnityDriver {
         return null;
     }
 
-    public AltUnityObject findElementByComponent(String componentName) throws Exception {
+    public AltUnityObject findElementByComponent(String componentName) {
         return findElementByComponent(componentName, "","");
     }
-    public AltUnityObject findElementByComponent(String componentName,String assemblyName) throws Exception{
+    public AltUnityObject findElementByComponent(String componentName,String assemblyName) {
         return findElementByComponent(componentName,assemblyName,"");
     }
 
-
-
-    public AltUnityObject[] findElementsByComponent(String componentName,String assemblyName, String cameraName) throws Exception {
+    public AltUnityObject[] findElementsByComponent(String componentName,String assemblyName, String cameraName) {
         send("findObjectsByComponent;"+assemblyName+";"  + componentName + ";" + cameraName + ";&");
         String data = recvall();
         if (!data.contains("error:")) return new Gson().fromJson(data, AltUnityObject[].class);
         handleErrors(data);
-        return null;
+        return new AltUnityObject[]{};
     }
 
-    public AltUnityObject[] findElementsByComponent(String componentName) throws Exception {
+    public AltUnityObject[] findElementsByComponent(String componentName) {
         return findElementsByComponent(componentName, "","");
     }
-    public AltUnityObject[] findElementsByComponent(String componentName,String assemblyName) throws Exception{
+    public AltUnityObject[] findElementsByComponent(String componentName,String assemblyName) {
         return findElementsByComponent(componentName,assemblyName,"");
     }
 
@@ -457,7 +499,7 @@ public class AltUnityDriver {
     }
 
 
-    public void handleErrors(String data) throws Exception {
+    public void handleErrors(String data) {
         String typeOfException = data.split(";")[0];
         if ("error:notFound".equals(typeOfException)) {
             throw new NotFoundException(data);
@@ -488,44 +530,57 @@ public class AltUnityDriver {
         }
     }
 
+    // TODO: move those two out of this type and make them compulsory
     public static void setupPortForwarding(String platform, int tcp_port) {
         System.out.println("Setting up port forward for " + platform + " on port " + tcp_port);
         removePortForwarding();
-        if (platform.equals("android")) {
+        if (platform.toLowerCase().equals("android".toLowerCase())) {
             try {
-                Runtime.getRuntime().exec("adb forward tcp:" + tcp_port + " tcp:" + tcp_port);
-                Thread.sleep(1000);
+                String commandToRun = "adb forward tcp:" + tcp_port + " tcp:" + tcp_port;
+                ProcessBuilder pb = new ProcessBuilder(commandToRun);
+                Process executionProcess = pb.start();
+                executionProcess.waitFor();
+//                Runtime.getRuntime().exec(commandToRun);
+//                Thread.sleep(1000);
                 System.out.println("adb forward enabled.");
             } catch (Exception e) {
-                System.out.println("AltUnityServer - abd probably not installed\n" + e);
+                System.err.println("AltUnityServer - abd probably not installed\n" + e);
             }
 
-        } else if (platform.equals("ios")) {
+        } else if (platform.toLowerCase().equals("ios".toLowerCase())) {
             try {
                 Runtime.getRuntime().exec("iproxy " + tcp_port + " " + tcp_port + "&");
                 Thread.sleep(1000);
                 System.out.println("iproxy forward enabled.");
             } catch (Exception e) {
-                System.out.println("AltUnityServer - no iproxy process was running/present\n" + e);
+                System.err.println("AltUnityServer - no iproxy process was running/present\n" + e);
             }
         }
     }
 
     public static void removePortForwarding() {
         try {
-            Runtime.getRuntime().exec("killall iproxy");
-            Thread.sleep(1000);
+            String commandToExecute = "killall iproxy";
+            ProcessBuilder pb = new ProcessBuilder(commandToExecute);
+            Process executionProcess = pb.start();
+            executionProcess.waitFor();
+//            Runtime.getRuntime().exec(commandToExecute);
+//            Thread.sleep(1000);
             System.out.println("Killed any iproxy process that may have been running...");
         } catch (Exception e) {
-            System.out.println("AltUnityServer - no iproxy process was running/present\n" + e);
+            System.err.println("AltUnityServer - no iproxy process was running/present\n" + e);
         }
 
         try {
-            Runtime.getRuntime().exec("adb forward --remove-all");
-            Thread.sleep(1000);
+            String commandToExecute = "adb forward --remove-all";
+            ProcessBuilder pb = new ProcessBuilder(commandToExecute);
+            Process executionProcess = pb.start();
+            executionProcess.waitFor();
+//            Runtime.getRuntime().exec(commandToExecute);
+//            Thread.sleep(1000);
             System.out.println("Removed existing adb forwarding...");
         } catch (Exception e) {
-            System.out.println("AltUnityServer - abd probably not installed\n" + e);
+            System.err.println("AltUnityServer - abd probably not installed\n" + e);
         }
     }
 }
